# UIT-AI-Scan-Trading-Signal

./: .gitignore  AGENTS.md  Makefile  PROJECT_RULES.md  README.md  SKILLS_USAGE.md  phase.md  pyproject.toml  requirements.txt
artifacts/models/: model1.pkl
artifacts/processed/: features_structure.parquet  labels_model2_bar.parquet  labels_strongmove.parquet  splits.json  test.parquet  val.parquet
artifacts/reports/: PHASE_1_7_REPORT.md  PHASE_8_UI_EXPORT_REPORT.md  PROGRESS_REPORT_CURRENT.md  PROJECT_PROGRESS_REPORT_2026-02-21.md  data_quality.json  dataset_checks.json  hotzones_test.json  hotzones_ui.json  labels_strongmove_report.json  leakage_checks.md  model1_metrics.json  model2_label_distribution.json  scanner_threshold_report.json  scanner_tuning_summary.json  zoneRisk_test.parquet
configs/: config.yaml
docs/: model2_label_spec.md
fe-demo-model1/: README.md  index.html  package-lock.json  package.json
fe-demo-model1/src/: App.tsx  styles.css
src/: __main__.py
src/data/: download_data.py  validate_data.py
src/evaluation/: check_dataset_splits.py  export_hotzones_ui.py  export_zoneRisk_points.py  extract_hotzones.py  leakage_checks_phase6.py  run_scanner_report.py  (+1 more)
tests/: test_dataset_checks.py  test_features_smoke.py  test_labels_strongmove.py  test_phase4_dataset_split.py  test_phase5_train_model1.py  test_phase6_hotzones.py  test_phase6_leakage_checks.py  test_phase6_scanner_report.py  test_phase7_scanner_tuning_summary.py  test_phase8_export_hotzones_ui.py  test_phase8_export_zoneRisk_points.py  test_phase9_model2_labels.py
(+24 files in other folders)
